--- a/hotel/rest/src/main/resources/application.properties
+++ b/hotel/rest/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=hotel
-server.port=8081
+server.port=8082
 server.servlet.context-path=/api/v1
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
@@ -9,4 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.boot.admin.client.url=http://localhost:8084/api/v1/admin
+
+
 
