--- a/hotel/api/pom.xml
+++ b/hotel/api/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.tinqinacademy</groupId>
+        <groupId>com.tinqinacademy.hotel</groupId>
         <artifactId>hotel</artifactId>
         <version>${revision}</version>
     </parent>
@@ -11,11 +11,7 @@
     <version>${revision}</version>
 
     <dependencies>
-        <dependency>
-            <groupId>com.tinqinacademy</groupId>
-            <artifactId>persistence</artifactId>
-            <version>${revision}</version>
-        </dependency>
+
         <dependency>
             <groupId>io.vavr</groupId>
             <artifactId>vavr</artifactId>
