--- a/hotel/core/pom.xml
+++ b/hotel/core/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.tinqinacademy</groupId>
+        <groupId>com.tinqinacademy.hotel</groupId>
         <artifactId>hotel</artifactId>
         <version>${revision}</version>
     </parent>
@@ -15,21 +15,21 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.tinqinacademy</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>api</artifactId>
             <version>${revision}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.tinqinacademy</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>persistence</artifactId>
             <version>${revision}</version>
         </dependency>
+
         <dependency>
-            <groupId>io.vavr</groupId>
-            <artifactId>vavr</artifactId>
-            <version>0.9.0</version>
-            <scope>compile</scope>
+            <groupId>${parent.groupId}</groupId>
+            <artifactId>domain</artifactId>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 
