--- a/hotel/restexport/pom.xml
+++ b/hotel/restexport/pom.xml
@@ -9,24 +9,28 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>persistence</artifactId>
+    <artifactId>restexport</artifactId>
     <version>${revision}</version>
 
     <dependencies>
 
-
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <groupId>${parent.groupId}</groupId>
+            <artifactId>api</artifactId>
+            <version>${revision}</version>
         </dependency>
 
-
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.16</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+            <version>13.3</version>
+        </dependency>
     </dependencies>
 
 </project>
