--- a/hotel/rest/pom.xml
+++ b/hotel/rest/pom.xml
@@ -32,11 +32,20 @@
     </build>
 
     <dependencies>
+
+        <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
+    </dependency>
         <dependency>
             <groupId>${parent.groupId}</groupId>
             <artifactId>core</artifactId>
             <version>${revision}</version>
         </dependency>
     </dependencies>
+
+
+
 
 </project>
