--- a/hotel/rest/src/main/resources/application.properties
+++ b/hotel/rest/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.boot.admin.client.url=http://localhost:8084/api/v1/admin
+spring.main.allow-bean-definition-overriding=true
+spring.flyway.enabled=false
+
 
 
